// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donuchart Regular should render correctly 1`] = `
<WithStyles(Donutchart)
  data={
    Array [
      Object {
        "hole": "0.76",
        "hoverinfo": "none",
        "labels": Array [
          "Uploads",
          "Downloads",
        ],
        "name": "Music",
        "textinfo": "none",
        "type": "pie",
        "values": Array [
          250,
          800,
        ],
      },
    ]
  }
  subtitle="Server Status Summary"
  title="Simple Donut"
>
  <Donutchart
    classes={Object {}}
    data={
      Array [
        Object {
          "hole": "0.76",
          "hoverinfo": "none",
          "labels": Array [
            "Uploads",
            "Downloads",
          ],
          "name": "Music",
          "textinfo": "none",
          "type": "pie",
          "values": Array [
            250,
            800,
          ],
        },
      ]
    }
    subtitle="Server Status Summary"
    title="Simple Donut"
  >
    <WithStyles(Chart)
      classes={Object {}}
      data={
        Array [
          Object {
            "hole": "0.76",
            "hoverinfo": "none",
            "labels": Array [
              "Uploads",
              "Downloads",
            ],
            "name": "Music",
            "textinfo": "none",
            "type": "pie",
            "values": Array [
              250,
              800,
            ],
          },
        ]
      }
      layout={Object {}}
      subtitle="Server Status Summary"
      title="Simple Donut"
      tooltipType="multiple"
      type="regular"
    >
      <Chart
        classes={
          Object {
            "defaultColors": "HvChart-defaultColors",
            "gridColor": "HvChart-gridColor",
            "legendText": "HvChart-legendText",
            "lineColor": "HvChart-lineColor",
            "plotColor": "HvChart-plotColor",
            "root": "HvChart-root",
            "vizText": "HvChart-vizText",
          }
        }
        data={
          Array [
            Object {
              "hole": "0.76",
              "hoverinfo": "none",
              "labels": Array [
                "Uploads",
                "Downloads",
              ],
              "name": "Music",
              "textinfo": "none",
              "type": "pie",
              "values": Array [
                250,
                800,
              ],
            },
          ]
        }
        layout={Object {}}
        subtitle="Server Status Summary"
        title="Simple Donut"
        tooltipType="multiple"
        type="regular"
      >
        <div
          className="HvChart-root"
        >
          <div
            onMouseMove={[Function]}
          >
            <WithStyles(Plot)
              config={
                Object {
                  "displayModeBar": false,
                  "responsive": true,
                }
              }
              data={
                Array [
                  Object {
                    "hole": "0.76",
                    "hoverinfo": "none",
                    "labels": Array [
                      "Uploads",
                      "Downloads",
                    ],
                    "name": "Music",
                    "textinfo": "none",
                    "type": "pie",
                    "values": Array [
                      250,
                      800,
                    ],
                  },
                ]
              }
              layout={
                Object {
                  "autosize": true,
                  "colorway": Array [
                    "#6EAFFF",
                    "#FFAB5C",
                    "#5CD1B2",
                    "#9672C1",
                    "#ED6868",
                    "#58C9DD",
                    "#FFDB70",
                    "#4AB573",
                    "#646A98",
                    "#EB7397",
                    "#33ABCC",
                    "#F8C169",
                    "#DE64BD",
                    "#419393",
                    "#F5996E",
                    "#528BBF",
                    "#EB95AF",
                    "#73BF9C",
                    "#B55984",
                    "#F7B552",
                  ],
                  "legend": Object {
                    "font": Object {
                      "color": "#414141",
                      "family": undefined,
                      "size": "12px",
                    },
                    "orientation": "h",
                    "x": 0.5,
                    "xanchor": "center",
                    "y": 1.15,
                    "yanchor": "middle",
                  },
                  "margin": Object {
                    "b": 50,
                    "l": 50,
                    "pad": 0,
                    "t": 50,
                  },
                  "paper_bgcolor": "transparent",
                  "plot_bgcolor": "transparent",
                  "xaxis": Object {
                    "automargin": true,
                    "fixedrange": true,
                    "gridcolor": "#CCCED0",
                    "linecolor": "#CCCED0",
                    "linewidth": 1,
                    "showgrid": false,
                    "showline": true,
                    "tickfont": Object {
                      "color": "#414141",
                      "family": Array [
                        "'Open Sans'",
                        "Arial",
                        "Helvetica",
                        "sans-serif",
                      ],
                      "size": 10,
                    },
                    "ticks": "",
                    "title": Object {
                      "font": Object {
                        "color": "#414141",
                        "family": Array [
                          "'Open Sans'",
                          "Arial",
                          "Helvetica",
                          "sans-serif",
                        ],
                        "size": 10,
                      },
                    },
                    "zeroline": false,
                  },
                  "yaxis": Object {
                    "automargin": true,
                    "fixedrange": true,
                    "gridcolor": "#CCCED0",
                    "linecolor": "#CCCED0",
                    "linewidth": 1,
                    "showgrid": true,
                    "showline": false,
                    "tickfont": Object {
                      "color": "#414141",
                      "family": Array [
                        "'Open Sans'",
                        "Arial",
                        "Helvetica",
                        "sans-serif",
                      ],
                      "size": 10,
                    },
                    "ticks": "",
                    "title": Object {
                      "font": Object {
                        "color": "#414141",
                        "family": Array [
                          "'Open Sans'",
                          "Arial",
                          "Helvetica",
                          "sans-serif",
                        ],
                        "size": 10,
                      },
                    },
                    "zeroline": false,
                  },
                }
              }
              onHover={[Function]}
              onUnHover={[Function]}
              subtitle="Server Status Summary"
              title="Simple Donut"
              type="regular"
            >
              <Plot
                classes={Object {}}
                config={
                  Object {
                    "displayModeBar": false,
                    "responsive": true,
                  }
                }
                data={
                  Array [
                    Object {
                      "hole": "0.76",
                      "hoverinfo": "none",
                      "labels": Array [
                        "Uploads",
                        "Downloads",
                      ],
                      "name": "Music",
                      "textinfo": "none",
                      "type": "pie",
                      "values": Array [
                        250,
                        800,
                      ],
                    },
                  ]
                }
                layout={
                  Object {
                    "autosize": true,
                    "colorway": Array [
                      "#6EAFFF",
                      "#FFAB5C",
                      "#5CD1B2",
                      "#9672C1",
                      "#ED6868",
                      "#58C9DD",
                      "#FFDB70",
                      "#4AB573",
                      "#646A98",
                      "#EB7397",
                      "#33ABCC",
                      "#F8C169",
                      "#DE64BD",
                      "#419393",
                      "#F5996E",
                      "#528BBF",
                      "#EB95AF",
                      "#73BF9C",
                      "#B55984",
                      "#F7B552",
                    ],
                    "legend": Object {
                      "font": Object {
                        "color": "#414141",
                        "family": undefined,
                        "size": "12px",
                      },
                      "orientation": "h",
                      "x": 0.5,
                      "xanchor": "center",
                      "y": 1.15,
                      "yanchor": "middle",
                    },
                    "margin": Object {
                      "b": 50,
                      "l": 50,
                      "pad": 0,
                      "t": 50,
                    },
                    "paper_bgcolor": "transparent",
                    "plot_bgcolor": "transparent",
                    "xaxis": Object {
                      "automargin": true,
                      "fixedrange": true,
                      "gridcolor": "#CCCED0",
                      "linecolor": "#CCCED0",
                      "linewidth": 1,
                      "showgrid": false,
                      "showline": true,
                      "tickfont": Object {
                        "color": "#414141",
                        "family": Array [
                          "'Open Sans'",
                          "Arial",
                          "Helvetica",
                          "sans-serif",
                        ],
                        "size": 10,
                      },
                      "ticks": "",
                      "title": Object {
                        "font": Object {
                          "color": "#414141",
                          "family": Array [
                            "'Open Sans'",
                            "Arial",
                            "Helvetica",
                            "sans-serif",
                          ],
                          "size": 10,
                        },
                      },
                      "zeroline": false,
                    },
                    "yaxis": Object {
                      "automargin": true,
                      "fixedrange": true,
                      "gridcolor": "#CCCED0",
                      "linecolor": "#CCCED0",
                      "linewidth": 1,
                      "showgrid": true,
                      "showline": false,
                      "tickfont": Object {
                        "color": "#414141",
                        "family": Array [
                          "'Open Sans'",
                          "Arial",
                          "Helvetica",
                          "sans-serif",
                        ],
                        "size": 10,
                      },
                      "ticks": "",
                      "title": Object {
                        "font": Object {
                          "color": "#414141",
                          "family": Array [
                            "'Open Sans'",
                            "Arial",
                            "Helvetica",
                            "sans-serif",
                          ],
                          "size": 10,
                        },
                      },
                      "zeroline": false,
                    },
                  }
                }
                onHover={[Function]}
                onUnHover={[Function]}
                subtitle="Server Status Summary"
                title="Simple Donut"
                type="regular"
              >
                <PlotlyComponent
                  classes={Object {}}
                  config={
                    Object {
                      "displayModeBar": false,
                      "responsive": true,
                    }
                  }
                  data={
                    Array [
                      Object {
                        "hole": "0.76",
                        "hoverinfo": "none",
                        "labels": Array [
                          "Uploads",
                          "Downloads",
                        ],
                        "name": "Music",
                        "textinfo": "none",
                        "type": "pie",
                        "values": Array [
                          250,
                          800,
                        ],
                      },
                    ]
                  }
                  debug={false}
                  layout={
                    Object {
                      "autosize": true,
                      "colorway": Array [
                        "#6EAFFF",
                        "#FFAB5C",
                        "#5CD1B2",
                        "#9672C1",
                        "#ED6868",
                        "#58C9DD",
                        "#FFDB70",
                        "#4AB573",
                        "#646A98",
                        "#EB7397",
                        "#33ABCC",
                        "#F8C169",
                        "#DE64BD",
                        "#419393",
                        "#F5996E",
                        "#528BBF",
                        "#EB95AF",
                        "#73BF9C",
                        "#B55984",
                        "#F7B552",
                      ],
                      "legend": Object {
                        "font": Object {
                          "color": "#414141",
                          "family": undefined,
                          "size": "12px",
                        },
                        "orientation": "h",
                        "x": 0.5,
                        "xanchor": "center",
                        "y": 1.15,
                        "yanchor": "middle",
                      },
                      "margin": Object {
                        "b": 50,
                        "l": 50,
                        "pad": 0,
                        "t": 50,
                      },
                      "paper_bgcolor": "transparent",
                      "plot_bgcolor": "transparent",
                      "xaxis": Object {
                        "automargin": true,
                        "fixedrange": true,
                        "gridcolor": "#CCCED0",
                        "linecolor": "#CCCED0",
                        "linewidth": 1,
                        "showgrid": false,
                        "showline": true,
                        "tickfont": Object {
                          "color": "#414141",
                          "family": Array [
                            "'Open Sans'",
                            "Arial",
                            "Helvetica",
                            "sans-serif",
                          ],
                          "size": 10,
                        },
                        "ticks": "",
                        "title": Object {
                          "font": Object {
                            "color": "#414141",
                            "family": Array [
                              "'Open Sans'",
                              "Arial",
                              "Helvetica",
                              "sans-serif",
                            ],
                            "size": 10,
                          },
                        },
                        "zeroline": false,
                      },
                      "yaxis": Object {
                        "automargin": true,
                        "fixedrange": true,
                        "gridcolor": "#CCCED0",
                        "linecolor": "#CCCED0",
                        "linewidth": 1,
                        "showgrid": true,
                        "showline": false,
                        "tickfont": Object {
                          "color": "#414141",
                          "family": Array [
                            "'Open Sans'",
                            "Arial",
                            "Helvetica",
                            "sans-serif",
                          ],
                          "size": 10,
                        },
                        "ticks": "",
                        "title": Object {
                          "font": Object {
                            "color": "#414141",
                            "family": Array [
                              "'Open Sans'",
                              "Arial",
                              "Helvetica",
                              "sans-serif",
                            ],
                            "size": 10,
                          },
                        },
                        "zeroline": false,
                      },
                    }
                  }
                  onAfterPlot={null}
                  onHover={[Function]}
                  onUnhover={[Function]}
                  revision={0}
                  style={
                    Object {
                      "position": "relative",
                    }
                  }
                  subtitle="Server Status Summary"
                  title="Simple Donut"
                  type="regular"
                  useResizeHandler={false}
                >
                  <div
                    style={
                      Object {
                        "position": "relative",
                      }
                    }
                  />
                </PlotlyComponent>
              </Plot>
            </WithStyles(Plot)>
          </div>
        </div>
      </Chart>
    </WithStyles(Chart)>
  </Donutchart>
</WithStyles(Donutchart)>
`;

exports[`Donuchart Thin should render correctly 1`] = `
<WithStyles(Donutchart)
  data={
    Array [
      Object {
        "hole": "0.94",
        "hoverinfo": "none",
        "labels": Array [
          "Uploads",
          "Downloads",
        ],
        "name": "Music",
        "textinfo": "none",
        "type": "pie",
        "values": Array [
          540,
          1234,
        ],
      },
    ]
  }
  subtitle="Server Status Summary"
  title="Thin Donut"
  type="thin"
>
  <Donutchart
    classes={Object {}}
    data={
      Array [
        Object {
          "hole": "0.94",
          "hoverinfo": "none",
          "labels": Array [
            "Uploads",
            "Downloads",
          ],
          "name": "Music",
          "textinfo": "none",
          "type": "pie",
          "values": Array [
            540,
            1234,
          ],
        },
      ]
    }
    subtitle="Server Status Summary"
    title="Thin Donut"
    type="thin"
  >
    <WithStyles(Chart)
      classes={Object {}}
      data={
        Array [
          Object {
            "hole": "0.94",
            "hoverinfo": "none",
            "labels": Array [
              "Uploads",
              "Downloads",
            ],
            "name": "Music",
            "textinfo": "none",
            "type": "pie",
            "values": Array [
              540,
              1234,
            ],
          },
        ]
      }
      layout={Object {}}
      subtitle="Server Status Summary"
      title="Thin Donut"
      tooltipType="multiple"
      type="thin"
    >
      <Chart
        classes={
          Object {
            "defaultColors": "HvChart-defaultColors",
            "gridColor": "HvChart-gridColor",
            "legendText": "HvChart-legendText",
            "lineColor": "HvChart-lineColor",
            "plotColor": "HvChart-plotColor",
            "root": "HvChart-root",
            "vizText": "HvChart-vizText",
          }
        }
        data={
          Array [
            Object {
              "hole": "0.94",
              "hoverinfo": "none",
              "labels": Array [
                "Uploads",
                "Downloads",
              ],
              "name": "Music",
              "textinfo": "none",
              "type": "pie",
              "values": Array [
                540,
                1234,
              ],
            },
          ]
        }
        layout={Object {}}
        subtitle="Server Status Summary"
        title="Thin Donut"
        tooltipType="multiple"
        type="thin"
      >
        <div
          className="HvChart-root"
        >
          <div
            onMouseMove={[Function]}
          >
            <WithStyles(Plot)
              config={
                Object {
                  "displayModeBar": false,
                  "responsive": true,
                }
              }
              data={
                Array [
                  Object {
                    "hole": "0.94",
                    "hoverinfo": "none",
                    "labels": Array [
                      "Uploads",
                      "Downloads",
                    ],
                    "name": "Music",
                    "textinfo": "none",
                    "type": "pie",
                    "values": Array [
                      540,
                      1234,
                    ],
                  },
                ]
              }
              layout={
                Object {
                  "autosize": true,
                  "colorway": Array [
                    "#6EAFFF",
                    "#FFAB5C",
                    "#5CD1B2",
                    "#9672C1",
                    "#ED6868",
                    "#58C9DD",
                    "#FFDB70",
                    "#4AB573",
                    "#646A98",
                    "#EB7397",
                    "#33ABCC",
                    "#F8C169",
                    "#DE64BD",
                    "#419393",
                    "#F5996E",
                    "#528BBF",
                    "#EB95AF",
                    "#73BF9C",
                    "#B55984",
                    "#F7B552",
                  ],
                  "legend": Object {
                    "font": Object {
                      "color": "#414141",
                      "family": undefined,
                      "size": "12px",
                    },
                    "orientation": "h",
                    "x": 0.5,
                    "xanchor": "center",
                    "y": 1.15,
                    "yanchor": "middle",
                  },
                  "margin": Object {
                    "b": 50,
                    "l": 50,
                    "pad": 0,
                    "t": 50,
                  },
                  "paper_bgcolor": "transparent",
                  "plot_bgcolor": "transparent",
                  "xaxis": Object {
                    "automargin": true,
                    "fixedrange": true,
                    "gridcolor": "#CCCED0",
                    "linecolor": "#CCCED0",
                    "linewidth": 1,
                    "showgrid": false,
                    "showline": true,
                    "tickfont": Object {
                      "color": "#414141",
                      "family": Array [
                        "'Open Sans'",
                        "Arial",
                        "Helvetica",
                        "sans-serif",
                      ],
                      "size": 10,
                    },
                    "ticks": "",
                    "title": Object {
                      "font": Object {
                        "color": "#414141",
                        "family": Array [
                          "'Open Sans'",
                          "Arial",
                          "Helvetica",
                          "sans-serif",
                        ],
                        "size": 10,
                      },
                    },
                    "zeroline": false,
                  },
                  "yaxis": Object {
                    "automargin": true,
                    "fixedrange": true,
                    "gridcolor": "#CCCED0",
                    "linecolor": "#CCCED0",
                    "linewidth": 1,
                    "showgrid": true,
                    "showline": false,
                    "tickfont": Object {
                      "color": "#414141",
                      "family": Array [
                        "'Open Sans'",
                        "Arial",
                        "Helvetica",
                        "sans-serif",
                      ],
                      "size": 10,
                    },
                    "ticks": "",
                    "title": Object {
                      "font": Object {
                        "color": "#414141",
                        "family": Array [
                          "'Open Sans'",
                          "Arial",
                          "Helvetica",
                          "sans-serif",
                        ],
                        "size": 10,
                      },
                    },
                    "zeroline": false,
                  },
                }
              }
              onHover={[Function]}
              onUnHover={[Function]}
              subtitle="Server Status Summary"
              title="Thin Donut"
              type="thin"
            >
              <Plot
                classes={Object {}}
                config={
                  Object {
                    "displayModeBar": false,
                    "responsive": true,
                  }
                }
                data={
                  Array [
                    Object {
                      "hole": "0.94",
                      "hoverinfo": "none",
                      "labels": Array [
                        "Uploads",
                        "Downloads",
                      ],
                      "name": "Music",
                      "textinfo": "none",
                      "type": "pie",
                      "values": Array [
                        540,
                        1234,
                      ],
                    },
                  ]
                }
                layout={
                  Object {
                    "autosize": true,
                    "colorway": Array [
                      "#6EAFFF",
                      "#FFAB5C",
                      "#5CD1B2",
                      "#9672C1",
                      "#ED6868",
                      "#58C9DD",
                      "#FFDB70",
                      "#4AB573",
                      "#646A98",
                      "#EB7397",
                      "#33ABCC",
                      "#F8C169",
                      "#DE64BD",
                      "#419393",
                      "#F5996E",
                      "#528BBF",
                      "#EB95AF",
                      "#73BF9C",
                      "#B55984",
                      "#F7B552",
                    ],
                    "legend": Object {
                      "font": Object {
                        "color": "#414141",
                        "family": undefined,
                        "size": "12px",
                      },
                      "orientation": "h",
                      "x": 0.5,
                      "xanchor": "center",
                      "y": 1.15,
                      "yanchor": "middle",
                    },
                    "margin": Object {
                      "b": 50,
                      "l": 50,
                      "pad": 0,
                      "t": 50,
                    },
                    "paper_bgcolor": "transparent",
                    "plot_bgcolor": "transparent",
                    "xaxis": Object {
                      "automargin": true,
                      "fixedrange": true,
                      "gridcolor": "#CCCED0",
                      "linecolor": "#CCCED0",
                      "linewidth": 1,
                      "showgrid": false,
                      "showline": true,
                      "tickfont": Object {
                        "color": "#414141",
                        "family": Array [
                          "'Open Sans'",
                          "Arial",
                          "Helvetica",
                          "sans-serif",
                        ],
                        "size": 10,
                      },
                      "ticks": "",
                      "title": Object {
                        "font": Object {
                          "color": "#414141",
                          "family": Array [
                            "'Open Sans'",
                            "Arial",
                            "Helvetica",
                            "sans-serif",
                          ],
                          "size": 10,
                        },
                      },
                      "zeroline": false,
                    },
                    "yaxis": Object {
                      "automargin": true,
                      "fixedrange": true,
                      "gridcolor": "#CCCED0",
                      "linecolor": "#CCCED0",
                      "linewidth": 1,
                      "showgrid": true,
                      "showline": false,
                      "tickfont": Object {
                        "color": "#414141",
                        "family": Array [
                          "'Open Sans'",
                          "Arial",
                          "Helvetica",
                          "sans-serif",
                        ],
                        "size": 10,
                      },
                      "ticks": "",
                      "title": Object {
                        "font": Object {
                          "color": "#414141",
                          "family": Array [
                            "'Open Sans'",
                            "Arial",
                            "Helvetica",
                            "sans-serif",
                          ],
                          "size": 10,
                        },
                      },
                      "zeroline": false,
                    },
                  }
                }
                onHover={[Function]}
                onUnHover={[Function]}
                subtitle="Server Status Summary"
                title="Thin Donut"
                type="thin"
              >
                <PlotlyComponent
                  classes={Object {}}
                  config={
                    Object {
                      "displayModeBar": false,
                      "responsive": true,
                    }
                  }
                  data={
                    Array [
                      Object {
                        "hole": "0.94",
                        "hoverinfo": "none",
                        "labels": Array [
                          "Uploads",
                          "Downloads",
                        ],
                        "name": "Music",
                        "textinfo": "none",
                        "type": "pie",
                        "values": Array [
                          540,
                          1234,
                        ],
                      },
                    ]
                  }
                  debug={false}
                  layout={
                    Object {
                      "autosize": true,
                      "colorway": Array [
                        "#6EAFFF",
                        "#FFAB5C",
                        "#5CD1B2",
                        "#9672C1",
                        "#ED6868",
                        "#58C9DD",
                        "#FFDB70",
                        "#4AB573",
                        "#646A98",
                        "#EB7397",
                        "#33ABCC",
                        "#F8C169",
                        "#DE64BD",
                        "#419393",
                        "#F5996E",
                        "#528BBF",
                        "#EB95AF",
                        "#73BF9C",
                        "#B55984",
                        "#F7B552",
                      ],
                      "legend": Object {
                        "font": Object {
                          "color": "#414141",
                          "family": undefined,
                          "size": "12px",
                        },
                        "orientation": "h",
                        "x": 0.5,
                        "xanchor": "center",
                        "y": 1.15,
                        "yanchor": "middle",
                      },
                      "margin": Object {
                        "b": 50,
                        "l": 50,
                        "pad": 0,
                        "t": 50,
                      },
                      "paper_bgcolor": "transparent",
                      "plot_bgcolor": "transparent",
                      "xaxis": Object {
                        "automargin": true,
                        "fixedrange": true,
                        "gridcolor": "#CCCED0",
                        "linecolor": "#CCCED0",
                        "linewidth": 1,
                        "showgrid": false,
                        "showline": true,
                        "tickfont": Object {
                          "color": "#414141",
                          "family": Array [
                            "'Open Sans'",
                            "Arial",
                            "Helvetica",
                            "sans-serif",
                          ],
                          "size": 10,
                        },
                        "ticks": "",
                        "title": Object {
                          "font": Object {
                            "color": "#414141",
                            "family": Array [
                              "'Open Sans'",
                              "Arial",
                              "Helvetica",
                              "sans-serif",
                            ],
                            "size": 10,
                          },
                        },
                        "zeroline": false,
                      },
                      "yaxis": Object {
                        "automargin": true,
                        "fixedrange": true,
                        "gridcolor": "#CCCED0",
                        "linecolor": "#CCCED0",
                        "linewidth": 1,
                        "showgrid": true,
                        "showline": false,
                        "tickfont": Object {
                          "color": "#414141",
                          "family": Array [
                            "'Open Sans'",
                            "Arial",
                            "Helvetica",
                            "sans-serif",
                          ],
                          "size": 10,
                        },
                        "ticks": "",
                        "title": Object {
                          "font": Object {
                            "color": "#414141",
                            "family": Array [
                              "'Open Sans'",
                              "Arial",
                              "Helvetica",
                              "sans-serif",
                            ],
                            "size": 10,
                          },
                        },
                        "zeroline": false,
                      },
                    }
                  }
                  onAfterPlot={null}
                  onHover={[Function]}
                  onUnhover={[Function]}
                  revision={0}
                  style={
                    Object {
                      "position": "relative",
                    }
                  }
                  subtitle="Server Status Summary"
                  title="Thin Donut"
                  type="thin"
                  useResizeHandler={false}
                >
                  <div
                    style={
                      Object {
                        "position": "relative",
                      }
                    }
                  />
                </PlotlyComponent>
              </Plot>
            </WithStyles(Plot)>
          </div>
        </div>
      </Chart>
    </WithStyles(Chart)>
  </Donutchart>
</WithStyles(Donutchart)>
`;
